apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/version: "1.45.0"
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: linkding
    app.kubernetes.io/managed-by: FluxCD
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
        app.kubernetes.io/version: "1.45.0"
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: linkding
        app.kubernetes.io/managed-by: FluxCD
    spec:
      # securityContext:
      #   runAsNonRoot: true
        # runAsUser: 1000
        # runAsGroup: 3000
        # fsGroup: 2000
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.45.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            # capabilities:
            #   drop: ["ALL"]
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
