apps/base/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  selector:
    app.kubernetes.io/name: linkding
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
