apps/base/linkding/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding
spec:
  parentRefs:
    - name: tls-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "linkding.home.arpa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkding
          port: 8000
