apps/base/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  labels:
    app.kubernetes.io/name: linkding
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - linkding.homelab.local
    secretName: linkding-cert
  rules:
  - host: linkding.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 8000
