apps/base/linkding/networkpolicy-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: linkding-default-deny
  namespace: linkding
spec:
  description: "Default-deny baseline for the linkding namespace"
  endpointSelector: {}
  ingress: []
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
